2004-04-25 Greg Watson
	
	Converted to MacOSX