@@ -21,7 +21,7 @@ INSTALL_DIR = ../os/$(OS)/$(ARCH)
 
 LIB_NAME_SPAWNER = libspawner.dylib
 LIB_NAME_FULL_SPAWNER = $(INSTALL_DIR)/libspawner.jnilib
-OBJS_SPAWNER=spawner.o io.o exec_unix.o pfind.o
+OBJS_SPAWNER=spawner.o io.o exec_unix.o exec_pty.o openpty.o pfind.o
 
 LIB_NAME_PTY = libpty.so
 LIB_NAME_FULL_PTY = $(INSTALL_DIR)/libpty.jnilib
