@@ -13,6 +13,7 @@
 #include <stdio.h>
 #include <string.h>
 #include <grp.h>
+#include <termios.h>
 
 #include <stdlib.h>
 
@@ -101,4 +102,22 @@ ptys_open(int fdm, char * pts_name)
 		return -1;
 	}
 	return fds;
+}
+
+void
+set_noecho(int fd)
+{
+	struct termios stermios;
+	if (tcgetattr(fd, &stermios) < 0) {
+		return ;
+	}
+
+	/* turn off echo */
+	stermios.c_lflag &= ~(ECHO | ECHOE | ECHOK | ECHONL);
+	/* Turn off the NL to CR/NL mapping ou output.  */
+	/*stermios.c_oflag &= ~(ONLCR);*/
+
+	stermios.c_iflag |= (IGNCR);
+
+	tcsetattr(fd, TCSANOW, &stermios);
 }
