@@ -1,3 +1,6 @@
+2004-11-18 Alain Magloire
+	Updated to reflect the changes in Spawner.java and PTY.java
+
 2004-04-25 Greg Watson
 	
 	Converted to MacOSX
